// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`some() should fail when no strings among values 1`] = `
Object {
  "children": Array [
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "0",
    },
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "1",
    },
    Object {
      "children": null,
      "message": "Value should be a string",
      "path": "2",
    },
  ],
  "message": "At least one child should be valid",
  "path": "",
}
`;

exports[`some() should support custom message 1`] = `
Object {
  "children": null,
  "message": "Custom message",
  "path": "",
}
`;

exports[`some() should throw an error when a value is not an array 1`] = `
Object {
  "children": null,
  "message": "Value should be an array",
  "path": "",
}
`;
